--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="#"><i class="bx bxl-instagram bx-flashing-hover"></i></a>
                         <a href="#"><i class='bx bxs-like bx-flashing-hover'></i></a>
         </div>
-        <a href="" class="btn ">Download CV</a>
+        <a href="Satya Final Resume.pdf" class="btn ">Download CV</a>
     </div>
     <div class="home-img">
         <img src="Satya.png" alt="">
